@@ -1887,6 +1887,7 @@ static Rboolean setupScreenDevice(pDevDesc dd, gadesc *xd, double w, double h, R
     dd->canGenMouseMove = TRUE;
     dd->canGenMouseUp = TRUE;
     dd->canGenKeybd = TRUE;
+    dd->canGenIdle = FALSE;
     dd->gettingEvent = FALSE;
 
     GA_xd = xd;
