@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2017-02-23 r72248) -- "Unsuffered Consequences"
+R Under development (unstable) (2017-02-23 r72249) -- "Unsuffered Consequences"
 Copyright (C) 2017 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
@@ -2015,8 +2015,8 @@ character(0)
 > 
 > ### ** Examples
 > 
-> # This currently only works on the Windows
-> # and X11(type = "Xlib") screen devices...
+> # This currently only works on the Windows, X11(type = "Xlib"), and
+> # X11(type = "cairo") screen devices...
 > ## Not run: 
 > ##D savepar <- par(ask = FALSE)
 > ##D dragplot <- function(..., xlim = NULL, ylim = NULL, xaxs = "r", yaxs = "r") {
@@ -3791,7 +3791,7 @@ $zlab
 > ###
 > options(digits = 7L)
 > base::cat("Time elapsed: ", proc.time() - base::get("ptime", pos = 'CheckExEnv'),"\n")
-Time elapsed:  7.843 0.125 7.988 0 0 
+Time elapsed:  9.568 0.156 9.725 0 0 
 > grDevices::dev.off()
 null device 
           1 
